Bloques 'Categorias' y 'Productos' con responsive. Fix del z-index del header. Pagina de inicio 'Home'

--- a/frontend/proyecto/src/components/molecules/CardCategory/CardCategory.css
+++ b/frontend/proyecto/src/components/molecules/CardCategory/CardCategory.css
@@ -6,9 +6,6 @@
   border: 1px solid #f3f1ed;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
-  font-weight: 700;
-
-  
 }
 
 .card-category-text {
@@ -17,10 +14,6 @@
   width: 90%;
   margin: auto;
   margin-top: auto;
- 
-  /* padding-top: 4px;
-  padding-left: 11.5px;
-  padding-bottom: 6.72px; */
 }
 
 .card-category img {
@@ -48,9 +41,6 @@
     margin-top: 15px;
   }
   .card-category-text h3{
-    padding-bottom: 10px;
-  }
-  .card-category-text h3{
     margin-bottom: 5px;
   }
   .to-show .card-category-text{
@@ -59,4 +49,17 @@
   .to-show .card-category-text h3{
     margin-bottom: 0px;
   }
+}
+
+@media (max-width:414px) {
+  .card-category{
+    width: 365px;
+    height: 257px;
+  }
+
+
+  .card-category-text{
+    margin-top: 5px;
+  }
+  
 }
