--- a/frontend/proyecto/src/components/organisms/Products/Products.css
+++ b/frontend/proyecto/src/components/organisms/Products/Products.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
     background-color:#EBEBEE;
 }
 
@@ -24,15 +24,28 @@
     display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-template-rows: 1fr 1fr; 
-    gap: 16px 16px; 
+    gap: 17px 17px; 
     justify-items: center;
 }
 
-.product-container {
-   
-}
 
 @media (max-width: 1366px) {
   
+    .product-cards-container{
+      grid-template-columns: 1fr; 
+      grid-template-rows: 1fr 1fr; 
+    }
+   
+  }
+
+  @media (max-width: 768px) {
+  
+    .products-container {
+      padding-bottom: 20px;
+    }
+    .product-cards-container{
+      grid-template-columns: 1fr; 
+      grid-template-rows: 1fr 1fr; 
+    }
    
   }
